Refactor & fix errors

--- a/edlin/src/Makefile
+++ b/edlin/src/Makefile
@@ -1,22 +1,21 @@
 # Builds edlin
+# https://cc65.github.io/doc/using-make.html
+
+# TODO - Make cross-platform with BeanShell instead of GNU Make functions
 
 # Requirements:
 # 1. GNU Make must be used
 # 2. The cc65 compiler must be properly setup
 # 3. The AppleWin emulator is required for testing
+# 4. Java is required to create disks with AppleCommander
+
+SOURCES=editbuffer.c edlin.c error.c filename.c help.c string.c stringlist.c
 
 PGM=edlin
 DISK_VOL=$(PGM)
 DISK=$(PGM).dsk
 BASE_PRODOS_DISK=../storage/prodos-2.0.3-boot.dsk
 AC=java -jar ../lib/AppleCommander-ac-1.4.0.jar
-
-CC=cl65
-AS=ca65
-OBJS=$(PGM).o
-HDRS=
-CFLAGS=-O -t $(CC65_TARGET) -DTRACE
-LDFLAGS=-t $(CC65_TARGET) # -S $6000 to make both hi-res pages available
 
 # Extra stuff
 BASIC_AUX_TYPE=0x0801
@@ -25,7 +24,17 @@ SYS_LOAD_ADDR=0x2000
 BIN_LOAD_ADDR=0x0803
 
 ifndef CC65_TARGET
-	CC65_TARGET:=apple2enh
+CC65_TARGET=apple2enh
+endif
+
+ifdef CC65_TARGET
+CC      = cl65
+CFLAGS  = -t $(CC65_TARGET) --create-dep $(<:.c=.d) -O
+LDFLAGS = -t $(CC65_TARGET) -m $(PGM).map # -S $6000 to make both hi-res pages available
+else
+CC      = gcc
+CFLAGS  = -MMD -MP -O
+LDFLAGS = -Wl,-Map,$(PGM).map
 endif
 
 # This is needed because the removeFiles function can't be used after the
@@ -65,20 +74,30 @@ endef
 
 ########################################
 
+.SUFFIXES:
+.PHONY: all clean
 all: $(DISK)
+
+ifneq ($(MAKECMDGOALS),clean)
+-include $(SOURCES:.c=.d)
+endif
+
+%.o: %.c
+	$(CC) -c $(CFLAGS) -o $@ $<
+
+$(PGM): $(SOURCES:.c=.o)
+	$(CC) $(LDFLAGS) -o $@ $^
 
 $(DISK): $(PGM)
 	$(call removeFiles,$(DISK))
 	$(call copyFile,$(BASE_PRODOS_DISK),$(DISK))
 	$(AC) -as $(DISK) $(PGM) BIN < $(PGM) || $(RM) $(DISK)
 
-$(PGM): $(OBJS)
-	$(CC) $(LDFLAGS) -o $@ $^
-
 test: $(DISK)
 	applewin -d1 $(DISK)
 	#$(APPLEWIN) -s7 empty -d1 $(DISK)
 
 clean:
-	$(call removeFiles,*.o $(PGM) $(DISK))
+	$(call removeFiles,$(SOURCES:.c=.o) $(SOURCES:.c=.d) $(PGM) $(PGM).map)
 
+# $(call removeFiles,*.o $(PGM) $(DISK))
