--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,5 @@
     "ca65.vscodeenv": "windows", // May be windows, linux, or mac
     "ca65.testenv": "windows",  // May be windows, linux, or mac
     "ca65.buildenv": "windows", // May be windows, linux or mac
-    "ca65.make.build": "make"
+    "makefile.makefilePath": "C:\\Users\\bill_\\git\\edlin\\Makefile"
 }
